--- a/404.html
+++ b/404.html
@@ -7,8 +7,12 @@ layout: default
   .container {
     margin: 10px auto;
     max-width: 600px;
+  }
+  
+  .center {
     text-align: center;
   }
+
   h1 {
     margin: 30px 0;
     font-size: 4em;
@@ -18,8 +22,8 @@ layout: default
 </style>
 
 <div class="container">
-  <h1>404</h1>
+  <h1 class="center">404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p align=center><strong>Page not found :(</strong></p>
+  <p align=center>The requested page could not be found.</p>
 </div>
