update: added ui listing and fixed some ui elements in projects blogpost listings

--- a/public/graph.html
+++ b/public/graph.html
@@ -7,7 +7,7 @@
     <meta name="viewport"
         content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico" />
-    <title>Circular Knowledge graph</title>
+    <title>Projects | Strix.Site</title>
     <script src="https://unpkg.com/zone.js@0.8.4/dist/zone.js?main=browser"></script>
     <link href="https://fonts.googleapis.com/css?family=Inter:400,600" rel="stylesheet">
     <link href="./css/styles.css" rel="stylesheet">
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
     <div class="canvas-container">
         <div class="selected-project">
             <div class="project-summary">
