update: added ganalytics on resume page and switch google tag script to head of layout

--- a/public/resume.html
+++ b/public/resume.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Nawras Mohammed Amin's resumé</title>
+    <title>CV | Nawras Mohammed Amin</title>
     <link rel="stylesheet" href="./css/cv.css" />
     <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Bitter' />
+    <script src="https://www.googletagmanager.com/gtag/js?id=G-332C634HQK"></script>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 </head>
 
@@ -23,7 +24,7 @@
 
                 <!-- <div class="phone-number phone-mobile">
                     <span class="label">Mobile</span>
-                    <span class="content">+1 (514) 348-2551</span>
+                    <span class="content"></span>
                 </div> -->
 
                 <div class="email-address">
