update: moved gtag script body to head tag

--- a/public/resume.html
+++ b/public/resume.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="./css/cv.css" />
     <link rel="stylesheet" href='https://fonts.googleapis.com/css?family=Bitter' />
     <script src="https://www.googletagmanager.com/gtag/js?id=G-332C634HQK"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', "G-332C634HQK");
+    </script>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
 </head>
 
