--- a/public/resume.html
+++ b/public/resume.html
@@ -147,122 +147,65 @@
             </div>
         </div>
         <div class="section page-break"></div>
-        <!-- <div class="section positions listing">
-            <h2 class="section-header">Research experience</h2>
+        <div class="section positions listing">
+            <h2 class="section-header">Notable curricular</h2>
             <div class="content">
                 <div class="position first">
-                    <div class="listing-title">Noria: partially stateful view maintenance</div>
-
-                    <div class="dates">
-                        <span class="start-month">September</span>
-                        <span class="start-year">2014</span>
-                        <span class="date-separator">-</span>
-                        <span class="end-month">October</span>
-                        <span class="end-year">2020</span>
-                    </div>
-
-                    <div class="listing-type">as part of PhD thesis work at MIT</div>
-
-                    <div class="listing-description">
-                        <p>
-                            Building a relational view materialization dataflow system with
-                            support for partial state. Led to the publication of the <a
-                                href="https://www.usenix.org/conference/osdi18/presentation/gjengset">
-                                Noria paper</a> in OSDI'18 and ultimately, my <a
-                                href="https://jon.thesquareplanet.com/papers/phd-thesis.pdf">PhD
-                                dissertation</a>.
-                        </p>
-                    </div>
-                </div>
-                <div class="position">
-                    <div class="listing-title">Determining user location using WiFi</div>
-
-                    <div class="dates">
-                        <span class="start-month">September</span>
-                        <span class="start-year">2013</span>
-                        <span class="date-separator">-</span>
-                        <span class="end-month">April</span>
-                        <span class="end-year">2014</span>
-                    </div>
-
-                    <div class="listing-type">with Kyle Jamieson, UCL</div>
-
-                    <div class="listing-description">
-                        <p>
-                            Building a practical implementation of <a
-                                href="https://www.usenix.org/system/files/conference/nsdi13/nsdi13-final51.pdf">ArrayTrack</a>.
-                            Led to the publication of our <a
-                                href="https://dl.acm.org/citation.cfm?doid=2639108.2639139">Phaser</a>
-                            paper in MobiCom'14.
-                        </p>
-                    </div>
-                </div>
-                <div class="position">
-                    <div class="listing-title">Wireless Interference and Multipath TCP</div>
-
-                    <div class="dates">
-                        <span class="start-month">June</span>
-                        <span class="start-year">2013</span>
-                        <span class="date-separator">-</span>
-                        <span class="end-month">September</span>
-                        <span class="end-year">2013</span>
-                    </div>
-
-                    <div class="listing-type">with Mark Handley, UCL</div>
-
-                    <div class="listing-description">
-                        <p>
-                            Master's Dissertation at University College London. Researching
-                            the behavior of Multipath TCP when used with multiple WiFi links.
-                            The report and executive summary can be seen <a href="https://jon.tsp.io/mscncs/">here</a>.
-                        </p>
-                    </div>
-                </div>
-                <div class="position">
-                    <div class="listing-title">Test-based model construction</div>
+                    <div class="listing-title">PolyCyber (PolyHx)</div>
 
                     <div class="dates">
                         <span class="start-month">January</span>
-                        <span class="start-year">2011</span>
+                        <span class="start-year">2020</span>
                         <span class="date-separator">-</span>
-                        <span class="end-month">April</span>
-                        <span class="end-year">2011</span>
+                        <span class="end-month">August</span>
+                        <span class="end-year">2022</span>
                     </div>
 
-                    <div class="listing-type">Oracle Labs Brisbane</div>
+                    <div class="listing-type">Member of the executive team at the Polytechnique official cybersecurity
+                        club</div>
 
                     <div class="listing-description">
                         <p>
-                            Researching the use of software models to construct test suites
-                            for applications as an industry internship at Bond University. The
-                            final report can be seen <a href="https://jon.tsp.io/model-research.pdf">here</a>.
-                        </p>
-                    </div>
-                </div>
-                <div class="position">
-                    <div class="listing-title">Arjen: improved Java error messages</div>
-
-                    <div class="dates">
-                        <span class="start-month">January</span>
-                        <span class="start-year">2011</span>
-                        <span class="date-separator">-</span>
-                        <span class="end-month">April</span>
-                        <span class="end-year">2011</span>
-                    </div>
-
-                    <div class="listing-type">with Warren Toomey, Bond University</div>
-
-                    <div class="listing-description">
-                        <p>
-                            Building <a href="https://minnie.tuhs.org/Programs/Arjen/">a
-                                tool</a> for providing improved error messages for novices in
-                            Java programming.
+                            Participating in cybersecurity
+                            competitions (CTF), conceptualizing
+                            challenges for organized competitions,
+                            collaborating with sponsors and
+                            performing various executive tasks such as presenting workshops,
+                            challenges, events, and more.
                         </p>
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
         <div class="section page-break"></div>
+        <div class="section positions listing">
+            <h2 class="section-header">Talks and presentations</h2>
+            <div class="content">
+                <div class="position first">
+                    <div class="listing-title">Introduction to Blockchain & Smart Contract Security</div>
+
+                    <div class="dates">
+                        <span class="start-month">July</span>
+                        <span class="start-year">2022</span>
+                    </div>
+
+                    <div class="listing-type">
+                        Guest speaker and workshop designer at MontreHack
+                    </div>
+
+                    <div class="listing-description">
+                        <p>
+                            Workshop on the fundamentals of Blockchain and smart contracts security. Prepared and
+                            designed a series of
+                            challenges designed to introduce new users to Solidity and Ethereum security.
+                            Presented the solutions afterwards in front of participants and live streaming audience.
+                            <br>
+                            <a href="https://github.com/StrixSC/MontreHack-Blockchain-Security">Reference</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script>
         var listings = document.getElementsByClassName('listing-title');
