--- a/public/resume.html
+++ b/public/resume.html
@@ -195,10 +195,10 @@
 
                     <div class="listing-description">
                         <p>
-                            Workshop on the fundamentals of Blockchain and smart contracts security. Prepared and
-                            designed a series of
+                            Workshop on the fundamentals of blockchain and smart contracts security. Prepared and
+                            organized a series of
                             challenges designed to introduce new users to Solidity and Ethereum security.
-                            Presented the solutions afterwards in front of participants and live streaming audience.
+                            Presented the solutions afterwards in front of participants and livestream audience.
                             <br>
                             <a href="https://github.com/StrixSC/MontreHack-Blockchain-Security">Reference</a>
                         </p>
