update: added more information to resume like events and notable presentations

--- a/public/resume.html
+++ b/public/resume.html
@@ -206,6 +206,42 @@
                 </div>
             </div>
         </div>
+        <div class="section page-break"></div>
+        <div class="section positions listing">
+            <h2 class="section-header">Events</h2>
+            <div class="content">
+                <div class="position first">
+                    <div class="listing-title">24h@CTF 2022</div>
+                    <div class="dates">
+                        <span class="start-month">Febuary</span>
+                        <span class="start-year">2022</span>
+                    </div>
+                    <div class="listing-type">
+                        Organizer and challenge designer.
+                    </div>
+                </div>
+                <div class="position">
+                    <div class="listing-title">UnitedCTF 2021</div>
+                    <div class="dates">
+                        <span class="start-month">September</span>
+                        <span class="start-year">2021</span>
+                    </div>
+                    <div class="listing-type">
+                        Organizer and challenge designer.
+                    </div>
+                </div>
+                <div class="position">
+                    <div class="listing-title">CyberSci Regionals</div>
+                    <div class="dates">
+                        <span class="start-month">January</span>
+                        <span class="start-year">2021</span>
+                    </div>
+                    <div class="listing-type">
+                        3rd place, participants
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script>
         var listings = document.getElementsByClassName('listing-title');
