update: forgot to translate notable event section

--- a/public/resume_fr.html
+++ b/public/resume_fr.html
@@ -184,7 +184,8 @@
             <h2 class="section-header">Exposés et présentations</h2>
             <div class="content">
                 <div class="position first">
-                    <div class="listing-title">Introduction to Blockchain & Smart Contract Security</div>
+                    <div class="listing-title">Introduction à la sécurité de la blockchain et des contrats intélligents
+                    </div>
 
                     <div class="dates">
                         <span class="start-month">Juillet</span>
