fix: updated cv

--- a/public/resume.html
+++ b/public/resume.html
@@ -241,7 +241,7 @@
                 </div>
             </div>
         </div>
-        <div class="i">
+        <div class="section skills i">
             Programming languages:
             Java, Python, JavaScript, Ruby, C++, C#, Objective-C, Swift, Kotlin, Go, Rust, PHP, Perl, TypeScript, Shell
             scripting, SQL, NoSQL
