fix: changed school name

--- a/public/resume.html
+++ b/public/resume.html
@@ -50,7 +50,7 @@
             <h2 class="section-header">Education</h2>
             <div class="content">
                 <div class="education">
-                    <div class="listing-title">École Polytechnique de Montréal</div>
+                    <div class="listing-title">Polytechnique Montreal</div>
 
                     <div class="dates">
                         <span class="start-year">2018</span>
