--- a/public/resume_fr.html
+++ b/public/resume_fr.html
@@ -49,7 +49,7 @@
             <h2 class="section-header">Éducation</h2>
             <div class="content">
                 <div class="education">
-                    <div class="listing-title">École Polytechnique de Montréal</div>
+                    <div class="listing-title">Polytechnique Montréal</div>
 
                     <div class="dates">
                         <span class="start-year">2018</span>
