feat: added extra information in CV

--- a/public/resume.html
+++ b/public/resume.html
@@ -115,12 +115,18 @@
 
                     <div class="listing-description">
                         <ul>
-                            <li>Develop and model integrations using Apache NiFi and Oracle
-                                OIC/ICS.</li>
-                            <li>Conceptualization and execution of unit and functional tests on the
-                                designed integrations.</li>
-                            <li>Database modeling for MySQL, PostgreSQL and OracleDB databases.</li>
-                            <li>Deployment and management of Oracle SOA Suite and ICO processes.</li>
+                            <li>
+                                Backend development with Node.js, utilizing microservice architecture and industry best practices.
+                            </li>
+                            <li>
+                                Deployment and management of infrastructure on Oracle Cloud and Google Cloud Platform.
+                            </li>
+                            <li>
+                                Development and modeling and testing of integrations and processes using Apache NiFi and Oracle OIC/ICS.
+                            </li>
+                            <li>
+                                Modeling of MySQL, PostgreSQL, and OracleDB databases using pl/pgSQL and PL/SQL.
+                            </li>
                         </ul>
                     </div>
                 </div>
