--- a/public/resume_fr.html
+++ b/public/resume_fr.html
@@ -115,13 +115,16 @@
 
                     <div class="listing-description">
                         <ul>
-                            <li>Développer et modéliser des intégrations en utilisant Apache NiFi et Oracle
+                            <li>
+                                Développement backend avec Node.js en utilisant une architecture de microservices.
+                            </li>
+                            <li>
+                                Déploiement et la gestion d'infrastructure sur Oracle Cloud et Google Cloud Platform.
+                            </li>
+                            <li>Développement et modélisation et test d'intégrations et de processus en utilisant Apache NiFi et Oracle
                                 OIC/ICS.</li>
-                            <li>Conceptualisation et exécution de tests unitaires et fonctionnels sur les
-                                intégrations conçues.</li>
                             <li>Modélisation de bases de données MySQL, PostgreSQL et
-                                OracleDB.</li>
-                            <li>Déploiement et gestion des processus Oracle SOA Suite et ICO.</li>
+                                OracleDB avec du pl/pgSQL et PL/SQL.</li>
                         </ul>
                     </div>
                 </div>
